[gd_scene load_steps=6 format=3 uid="uid://ci4ifekbu14o1"]

[ext_resource type="Script" path="res://UI/ui.gd" id="1_ajy3o"]
[ext_resource type="Theme" uid="uid://dhs3pbm357mtn" path="res://UI/main_theme.tres" id="1_dkt25"]
[ext_resource type="PackedScene" uid="uid://c5w6dsiq8weh" path="res://Objects/health_sprite.tscn" id="3_00atw"]
[ext_resource type="StyleBox" uid="uid://767rq0ud6mm0" path="res://UI/bg_progress.tres" id="3_3u56p"]
[ext_resource type="StyleBox" uid="uid://dry7we76c5mxd" path="res://UI/fill_progress.tres" id="4_0g70p"]

[node name="UI" type="CanvasLayer"]
script = ExtResource("1_ajy3o")

[node name="UIContainer" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="VBoxContainer" type="VBoxContainer" parent="UIContainer"]
layout_mode = 1
offset_left = 20.0
offset_top = 20.0
offset_right = 155.0
offset_bottom = 102.0

[node name="HealthContainer" type="HBoxContainer" parent="UIContainer/VBoxContainer"]
layout_mode = 2

[node name="HealthLabel" type="Label" parent="UIContainer/VBoxContainer/HealthContainer"]
layout_mode = 2
theme = ExtResource("1_dkt25")
text = "Health: "

[node name="HealthSprite" parent="UIContainer/VBoxContainer/HealthContainer" instance=ExtResource("3_00atw")]
layout_mode = 2

[node name="ScoreContainer2" type="HBoxContainer" parent="UIContainer/VBoxContainer"]
layout_mode = 2

[node name="BestScoreLabel" type="Label" parent="UIContainer/VBoxContainer/ScoreContainer2"]
layout_mode = 2
theme = ExtResource("1_dkt25")
text = "Best Score:"

[node name="ScoreContainer" type="HBoxContainer" parent="UIContainer/VBoxContainer"]
layout_mode = 2

[node name="ScoreLabel" type="Label" parent="UIContainer/VBoxContainer/ScoreContainer"]
layout_mode = 2
theme = ExtResource("1_dkt25")
text = "Score:"

[node name="HealthBar" type="ProgressBar" parent="."]
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -21.0
grow_horizontal = 2
grow_vertical = 0
size_flags_horizontal = 8
size_flags_vertical = 8
mouse_filter = 2
theme = ExtResource("1_dkt25")
theme_override_font_sizes/font_size = 15
theme_override_styles/background = ExtResource("3_3u56p")
theme_override_styles/fill = ExtResource("4_0g70p")
max_value = 10.0
value = 10.0
allow_greater = true
allow_lesser = true
